--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: event) do |form| %>
+<%= form_with(model: event, html: { multipart: true }) do |form| %>
   <% if event.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -28,7 +28,7 @@
 
   <div>
     <%= form.label :description, style: "display: block" %>
-    <%= form.textarea :description %>
+    <%= form.text_area :description, rows: 5 %>
   </div>
 
   <div>
@@ -42,6 +42,12 @@
   </div>
 
   <div>
+    <%= form.label :photo, style: "display: block" %>
+    <%= form.file_field :photo, required: true, accept: "image/*" %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
+
 <% end %>
