--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -40,3 +40,9 @@
 <%# Messages de retour Stripe (si tu veux afficher ceux des routes success/cancel dans layouts) %>
 <% if notice %><p style="color: green"><%= notice %></p><% end %>
 <% if alert %><p style="color: red"><%= alert %></p><% end %>
+
+<% if @event.photo.attached? %>
+  <%= image_tag @event.photo, alt: @event.title %>
+<% else %>
+  <p>Aucune photo pour cet événement.</p>
+<% end %>
