--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,53 +1,71 @@
-<%= form_with(model: event, html: { multipart: true }) do |form| %>
-  <% if event.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+<div class="row justify-content-center">
+  <div class="col-12 col-lg-8">
+    <div class="card shadow-sm">
+      <div class="card-body p-4 p-md-5">
+        <%= form_with(model: event, html: { multipart: true }) do |form| %>
+          <% if event.errors.any? %>
+            <div class="alert alert-danger">
+              <h2 class="h5 mb-2"><%= pluralize(event.errors.count, "erreur") %> ont empêché l’enregistrement :</h2>
+              <ul class="mb-0">
+                <% event.errors.each do |error| %>
+                  <li><%= error.full_message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-      <ul>
-        <% event.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <div class="row g-3">
+            <div class="col-12">
+              <div class="form-floating">
+                <%= form.text_field :title, class: "form-control", placeholder: "Titre" %>
+                <%= form.label :title, "Titre" %>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="form-floating">
+                <%= form.datetime_field :start_date, class: "form-control", placeholder: "Date de début" %>
+                <%= form.label :start_date, "Date de début" %>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-floating">
+                <%= form.number_field :duration, class: "form-control", placeholder: "Durée (min)", min: 0 %>
+                <%= form.label :duration, "Durée (min)" %>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="form-floating">
+                <%= form.number_field :price, class: "form-control", placeholder: "Prix en €", min: 0 %>
+                <%= form.label :price, "Prix en €" %>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-floating">
+                <%= form.text_field :location, class: "form-control", placeholder: "Lieu" %>
+                <%= form.label :location, "Lieu" %>
+              </div>
+            </div>
+
+            <div class="col-12">
+              <div class="form-floating">
+                <%= form.text_area :description, class: "form-control", placeholder: "Description", rows: 5, style: "height: 120px" %>
+                <%= form.label :description, "Description" %>
+              </div>
+            </div>
+
+            <div class="col-12">
+              <label class="form-label">Photo</label>
+              <%= form.file_field :photo, required: true, accept: "image/*", class: "form-control" %>
+            </div>
+
+            <div class="col-12">
+              <%= form.submit class: "btn btn-primary w-100" %>
+            </div>
+          </div>
         <% end %>
-      </ul>
+      </div>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :start_date, style: "display: block" %>
-    <%= form.datetime_field :start_date %>
   </div>
-
-  <div>
-    <%= form.label :duration, style: "display: block" %>
-    <%= form.number_field :duration %>
-  </div>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description, rows: 5 %>
-  </div>
-
-  <div>
-    <%= form.label :price, style: "display: block" %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div>
-    <%= form.label :location, style: "display: block" %>
-    <%= form.text_field :location %>
-  </div>
-
-  <div>
-    <%= form.label :photo, style: "display: block" %>
-    <%= form.file_field :photo, required: true, accept: "image/*" %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-
-<% end %>
+</div>
