--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,11 +1,8 @@
-<% content_for :title, "New event" %>
-
-<h1>New event</h1>
-
-<%= render "form", event: @event %>
-
-<br>
-
-<div>
-  <%= link_to "Back to events", events_path %>
+<% content_for :title, "Créer un événement" %>
+<div class="container py-4">
+  <h1 class="h3 mb-4">Créer un événement</h1>
+  <%= render "form", event: @event %>
+  <div class="mt-3">
+    <%= link_to "Retour", events_path, class: "link-light" %>
+  </div>
 </div>
