--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,12 +1,10 @@
-<% content_for :title, "Editing item" %>
+<% content_for :title, "Modifier l’item" %>
 
-<h1>Editing item</h1>
-
-<%= render "form", item: @item %>
-
-<br>
-
-<div>
-  <%= link_to "Show this item", @item %> |
-  <%= link_to "Back to items", items_path %>
+<div class="container py-4">
+  <h1 class="h3 mb-4">Modifier l’item</h1>
+  <%= render "form", item: @item %>
+  <div class="mt-3 d-flex gap-3">
+    <%= link_to "Voir", @item, class: "link-light" %>
+    <%= link_to "Retour", items_path, class: "link-light" %>
+  </div>
 </div>
