--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,17 +4,29 @@
   <p style="color: red">Paiement annulé.</p>
 <% end %>
 
+<p style="color: green"><%= notice %></p>
+
 <% content_for :title, "Items" %>
 
-<h1>Items</h1>
+<% content_for :full_bleed do %>
+  <%= render "shared/banner" %>
+<% end %>
 
-<div id="items">
-  <% @items.each do |item| %>
-    <%= render item %>
-    <p>
-      <%= link_to "Show this item", item %>
-    </p>
-  <% end %>
+<h1 class="visually-hidden">Items</h1>
+
+<div class="container py-5">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h2 class="h4 mb-0">Notre sélection</h2>
+    <% if user_signed_in? %>
+      <%= link_to "Nouvel item", new_item_path, class: "btn btn-primary btn-sm" %>
+    <% end %>
+  </div>
+
+  <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
+    <% @items.each do |item| %>
+      <div class="col">
+        <%= render item %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<%= link_to "New item", new_item_path %>
