--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,11 +1,9 @@
-<% content_for :title, "New item" %>
+<% content_for :title, "Nouvel item" %>
 
-<h1>New item</h1>
-
-<%= render "form", item: @item %>
-
-<br>
-
-<div>
-  <%= link_to "Back to items", items_path %>
+<div class="container py-4">
+  <h1 class="h3 mb-4">Créer un item</h1>
+  <%= render "form", item: @item %>
+  <div class="mt-3">
+    <%= link_to "Retour", items_path, class: "link-light" %>
+  </div>
 </div>
