--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,25 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Eventbrite</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
+    <%= link_to "Eventbrite2", root_path, class: "navbar-brand" %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ms-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item"><%= link_to "Accueil", root_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Événements", events_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Profil", edit_user_registration_path, class: "nav-link" %></li>
-          <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path,
-                data: { turbo_method: :delete },
-                class: "nav-link" %>
-          </li>
-        <% else %>
-          <li class="nav-item"><%= link_to "Sign in", new_user_session_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Sign up", new_user_registration_path, class: "nav-link" %></li>
-        <% end %>
+
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><%= link_to "Accueil", root_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Événements", events_path, class: "nav-link" %></li>
       </ul>
+
+      <div class="d-flex gap-2">
+        <% if user_signed_in? %>
+          <%= link_to "Créer un événement", new_event_path, class: "btn btn-primary" %>
+          <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn btn-outline-light" %>
+        <% else %>
+          <%= link_to "Se connecter", new_user_session_path, class: "btn btn-outline-light" %>
+          <%= link_to "Créer un événement", new_event_path, class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
   </div>
-</nav>
+  </nav>
